// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrSheetEmployee Component displays the PrSheetEmployee, component: INFLUENCE_OF_LEADER_AND_ENVIRONMENT 1`] = `
<div>
  <WithStyles(List)
    className="PrSheetEmployee-nestedText-2"
    component="div"
    disablePadding={true}
  >
    <WithStyles(ListItem)>
      <WithStyles(Grid)
        container={true}
        direction="column"
      >
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(PrTextField)
            fieldId="INFLUENCE_OF_LEADER_AND_ENVIRONMENT_CommentId"
            helperText="Wichtiges für meine Entwicklung, notwendige Änderungen, mein Beitrag dazu."
            label="Beitrag des Vorgesetzten und des Umfelds"
            onChange={[Function]}
            openEditing={true}
            readOnlyText=""
            required={true}
            writeableText=""
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;

exports[`PrSheetEmployee Component displays the PrSheetEmployee, component: ROLE_AND_PROJECT_ENVIRONMENT  1`] = `
<div>
  <WithStyles(List)
    className="PrSheetEmployee-nestedText-2"
    component="div"
    disablePadding={true}
  >
    <WithStyles(ListItem)>
      <WithStyles(Grid)
        container={true}
        direction="column"
      >
        <WithStyles(Grid)
          item={true}
          lg={12}
          md={12}
          sm={12}
          xl={12}
          xs={12}
        >
          <WithStyles(PrTextField)
            fieldId="ROLE_AND_PROJECT_ENVIRONMENT_CommentId"
            helperText=" "
            label="Mein Projekt, Aufgabe, Rolle und Projektumfeld"
            onChange={[Function]}
            openEditing={true}
            readOnlyText=""
            required={true}
            writeableText=""
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;
